--- a/.gitconfig
+++ b/.gitconfig
@@ -1,20 +1,20 @@
 [github]
-	user = norm
+	user = SteveMarshall
 	token = REPLACE_ME_WITH_TOKEN
 [user]
-	email = norm@cackhanded.net
-	name = Mark Norman Francis
+	email = steve@nascentguruism.com
+	name = Steve Marshall
 [color]
-	status = auto
-	diff = auto
 	branch = auto
+	diff = auto
+	status = auto
 [merge]
 	tool = opendiff
 [alias]
-	co = checkout
 	br = branch
 	ci = commit
-	s  = status
+	co = checkout
 	d  = diff
+	s  = status
 [core]
-	excludesfile = /Users/norm/.gitignore
+	excludesfile = /Users/stevema/.gitignore
