Update media configuration for media 0.10

--- a/etc/media.conf
+++ b/etc/media.conf
@@ -1,20 +1,21 @@
-
 # Input
-base_directory  = /Users/Steven/Encoding
-data_directory  = /Users/Steven/Encoding/Data
-log_directory   = /Users/Steven/Encoding/Log
+queue_directory  = /Users/Steven/Encoding/queue
+encode_directory = /Users/Steven/Encoding/encoding
+encoder_log_file = /Users/Steven/Encoding/queue/encoder.log
+encoder_pid_file = /Users/Steven/Encoding/queue/encoder.pid
+cache_directory  = /Users/Steven/Encoding/queue/cache
 
 # Output
-add_to_itunes   = 0 
-trash_directory = /Users/Steven/Encoding/Todo-Meta
-tv_directory    = /Users/Steven/Encoding/TV
-movie_directory = /Users/Steven/Encoding/Movie
+add_to_itunes    = 0
+tv_directory     = /Users/Steven/Encoding/TV
+movies_directory = /Users/Steven/Encoding/Movies
 
-[rationalise]
+use_imdb = 1
 
-[common]
+[handbrake]
 # TODO: My common settings!
 quality         = 17
+x264opts        = 
 # uncomment for testing (lowest quality, small video, fastest processing)
 # quality   = 50
 # maxWidth  = 240
