--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,12 @@
 .macports
 .lesshst
 .viminfo
+.irb_history
 
 .ssh
 
 .rbenv
+.berkshelf
 .chef
 .gem
 .vagrant*
@@ -33,6 +35,7 @@ Downloads/
 .dropbox/
 Dropbox/
 Encoding/
+LayerVault/
 Library/
 Media/
 Movies/
@@ -43,3 +46,4 @@ Public/
 Sites/
 Sources/
 Virtual Machines/
+Work Dropbox
