Update global git config
- Auto-push only to same-named branches
- Don't include hub config; that’s now in .config/hub
- Default to using colour output on terminals

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,13 +1,6 @@
-[github]
-	user = SteveMarshall
-	token = REPLACE_ME_WITH_TOKEN
 [user]
 	email = steve@nascentguruism.com
 	name = Steve Marshall
-[color]
-	branch = auto
-	diff = auto
-	status = auto
 [merge]
 	tool = opendiff
 [alias]
@@ -26,4 +19,6 @@
 [credential]
 	helper = osxkeychain
 [push]
-	default = tracking
+	default = simple
+[color]
+	ui = true
