Ignore git typos
I often type `git` as `gi`, so deal with that. Also make the autocorrect timeout longer so I can see my mistakes.

--- a/.gitconfig
+++ b/.gitconfig
@@ -15,6 +15,11 @@
 	fu = checkout -f
 	hist = log --all --graph --pretty='[%C(cyan)%h%Creset]%C(bold cyan)%d%Creset %s'
 	lp = log -p
+  tadd = add
+  tpull = pull
+  tpush = push
+  tstatus = status
+  tst = st
 [core]
 	excludesfile = ~/etc/git/ignore
 [credential]
@@ -24,6 +29,6 @@
 [color]
 	ui = true
 [help]
-	autocorrect = 1
+	autocorrect = 20
 [diff]
 	renames = true
