--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.bash_sessions
+
 .CFUserTextEncoding
 .com.apple.timemachine.supported
 .cpan*
@@ -10,6 +12,7 @@
 .ipython
 .rdebug_hist
 .byebug_hist
+.lldb
 .psql_history
 .sqlite_history
 .config
