--- a/.gitignore
+++ b/.gitignore
@@ -1,111 +1,17 @@
-.bash_sessions
-.bash_history
+# Blacklist files/folders in same directory as the .gitignore file
+/*
 
-.bundle
-.cache
-.composer
-.docker
-.electron
-.heroku
-.ivy2
-.jspm
-.kube
-.local
-.node-gyp
-.npm
-.nvm
-.oracle_jre_usage
-.rbenv
-.sbt
-.serverless
-.standard-cache
-.travis
-.tsuru
-.vnc
-.vscode
+# Whitelist some files
+!.gitignore
+!README.markdown
+!.bash_profile
+!.bashrc
+!.gitconfig
+!.hushlogin
+!.inputrc
+!.ruby-version
+!.vimrc
 
-.CFUserTextEncoding
-.com.apple.timemachine.supported
-.cpan*
-.cups
-.dbshell
-.dvdcss
-.macports
-.lesshst
-.viminfo
-.wget-hsts
-.irb_history
-.ipython
-.mongorc.js
-.netrc
-.node_repl_history
-.pry_history
-.psql_history
-.serverlessrc
-.sqlite_history
-.rdebug_hist
-.byebug_hist
-.lldb
-.psql_history
-.sqlite_history
-.config
-.rnd
-.skipbuddy
-.v8flags*
-
-.ssh
-
-.babel.json
-.rubies
-.bundler
-.berkshelf
-.chef
-.gem
-.boot2docker
-.vagrant*
-.virtualenvs
-.aws
-.config.yaml
-.gnupg
-.yarnrc
-.z
-
-redc.sh
-soloistrc
-cookbooks
-Solarized Dark.itermcolors
-
-bin/mate
-bin/HandBrakeCLI
-
-etc/bash/saved_history
-etc/bash/secrets
-etc/less_history
-etc/macos/
-
-var/encoder.pid
-
-Applications/
-Apps/
-Creative Cloud Files/
-Desktop/
-Development/
-Documents/
-Downloads/
-.dropbox*
-Dropbox/
-go/
-Kubernetes/
-Learning/
-Library/
-Movies/
-Music/
-Pictures/
-Projects/
-Public/
-Sites/
-Sources/
-src/
-vagrant/
-Virtual Machines/
-VirtualBox VMs/
+# Whitelist
+!bin/
+!etc/
